app/assets/stylesheets/main.css.scss
html { background-color: #EEE; }

body {
  font-family: 'Alegreya Sans', sans-serif;
  font-size: 12pt;
  font-weight: 500;
  min-width: 750px;
  overflow-x: hidden
}

#nav {
  margin: -8px;
  margin-bottom: 0px;
  min-width: 100%;
  background-color: white;
  position: fixed;
  z-index: 100;
  .left {
    float: left;
    padding: 0.2em 1em;
    span { padding-right: 1em; }
  }
  .right {
    float: right;
    padding: 0.2em 1em;
  }
}

#headline {
  margin: auto;
  padding: 0 1.5em;
  padding-top: 3em;
  max-width:1200px;
  .back_link { padding-top: -1em; }
  h2 {
    margin-top: 0;
    font-style: normal;
  }
}

article {
  margin:auto;
  padding: 0 1.5em;
  max-width:1200px;
}
.with-sidebar{
  margin-left: 18em !important;
}
.with-thin-sidebar{
  margin-left: 16em !important;
}
.scroll-up {
  padding-top: 2em;
}

.notice {
  padding: 0.3em 2.5em;
  margin: 0.5em 0;
  border: 1px solid #8eb021;
  background-color: #a5c63b;
  font-weight: 900;
  color: #FFF;
  text-align: center;
}
.alert {
  padding: 0.3em 2.5em;
  margin: 0.5em 0;
  border: 1px solid #c0392b;
  background-color: #e74c3c;
  font-weight: 900;
  color: #FFF;
  text-align: center;
}

.sidebar {
  float: left;
  width: 15em;
  padding-left: 30px;
  padding-top:2em;
  position: fixed;
}

.thin-sidebar {
  float: left;
  padding-left: 30px;
  padding-top: 2em;
  width: 14em;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Alegreya', serif;
  font-weight: 900;
  font-style: italic;
  color: #555;
  line-height: 1;
  margin-bottom: 0;
}

/* The Sass "context" map */
$context-font: (
  sidebar: 1,
  thin-sidebar: 1,
  showinfo: 0.8,
  show-notes: 0.7
);
$step-size-heading: 0.33333;
@mixin heading-size($size) {
  font-size: $size * $step-size-heading + em;
}
@each $element, $value in $context-font {
  .#{$element} {
    h1 { @include heading-size(6 * $value); }
    h2 { @include heading-size(5 * $value); }
    h3 { @include heading-size(4 * $value); }
    h4 { @include heading-size(3 * $value); }
    h5 { @include heading-size(2 * $value); }
    h6 { @include heading-size(1 * $value); }
  }
}
.no-margin {margin: 0;}

.showinfo h2 {
  font-style: normal;
  color: #222;
}
.showinfo p { margin: 0; }
.showinfo .with {
  padding-left: 1.5em;
  font-style: italic;
}

a {
  color: #3498db;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}

.field {
  margin-bottom: 0.7em;
}
.field_with_errors {
  display: inline;
  label {
    padding: 0 0.2em;
    background-color: rgba(231, 76, 60, 0.72);
    margin-bottom: 1pt;
  }
  input {
    margin-top: 0.3em;
  }
}

label {
  font-weight: 300;
  font-style: italic;
}

.field input,
.field select {
  width: 100%;
  height: 2em;
  padding: none;
}
.field textarea {
  width: 100%;
  border: none;
}

.accent { color: #FD7400 !important; }
.bold { font-weight: 700; }
.italic { font-style: italic; }
.subtitle {
  margin-top: 0;
  color: #999;
  font-weight: 400;
}

.highlight { background-color: #ffe88a; }

.show-notes-box {
  color: #777;
  border: solid 1pt #7f9932;
  background-color: #ECEFE4;
  padding: 0.25em;
  margin: -0.5em 0 0.5em 0;
  max-width: 45em;
  h4 {
    margin: 0;
    display: inline-block;
    margin-right: 1em;
    color: #7f9932;
  }
  p {
    margin: 0.5em 0;
  }
  .show-notes {
    *:first-child {
      margin-top: 0;
    }
  } 
}
td > .show-notes-box {
  margin:0;
}

